--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -4,7 +4,7 @@ dock_1_selected_tab_idx=0
 dock_2_selected_tab_idx=0
 dock_3_selected_tab_idx=0
 dock_4_selected_tab_idx=0
-dock_5_selected_tab_idx=1
+dock_5_selected_tab_idx=0
 dock_6_selected_tab_idx=0
 dock_7_selected_tab_idx=0
 dock_8_selected_tab_idx=0
@@ -19,19 +19,19 @@ dock_filesystem_split=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://Inimigos/arrow.tscn")
-dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://Player/", "res://Inimigos/", "res://Bibliotecas/")
+dock_filesystem_selected_paths=PackedStringArray("res://Player/kunai.tscn")
+dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://Player/", "res://Bibliotecas/Ninja Asset Pack/Tiles/", "res://Bibliotecas/Ninja Asset Pack/Ninja/", "res://Bibliotecas/Ninja Asset Pack/Ninja/Sprites/", "res://Bibliotecas/Ninja Asset Pack/Ninja/Sprites/Sprite Sheets/", "res://Bibliotecas/Inimigos/")
 dock_3="Scene,Import"
 dock_4="FileSystem"
 dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://level_01.tscn", "res://Inimigos/slime.tscn", "res://Inimigos/archer.tscn", "res://Inimigos/arrow.tscn")
+open_scenes=PackedStringArray("res://Inimigos/archer.tscn", "res://Player/ninja.tscn", "res://Player/kunai.tscn")
 center_split_offset=-342
 selected_default_debugger_tab_idx=0
 selected_main_editor_idx=0
-current_scene="res://Inimigos/slime.tscn"
+current_scene="res://Player/kunai.tscn"
 selected_bottom_panel_item=0
 
 [ScriptEditor]
